// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Citation should render the component with link 1`] = `
<a
  href="https://www.example.com"
  onClick={[Function]}
  tabIndex="-1"
>
  <span
    className="chat-citation"
  >
    1
  </span>
</a>
`;

exports[`Citation should render the component without link 1`] = `
<span
  className="chat-citation"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  1
</span>
`;
